--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8" >
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mi Empresa</title>
-  <link rel="stylesheet" href="css/estilos.css" />
+  <link rel="stylesheet" href="css/estilos.css" >
+
+  
+  
 </head>
 
 <body>
   <header>
-    <div class="iconologo"> <a href="#"><img src="img/peinado.png" alt="" /></a>
+    <div class="iconologo"><a href="#"><img src="img/peinado.png" alt=""></a>
     </div>
     <div class="logo">Barber shop online</div>
     <nav>
       <ul class="menu">
         <li><a href="index.html" class="activo">Inicio</a></li>
-        <li><a href="productos.html">Productos</a></li>
-        <li><a href="presupuesto.html">Presupuesto</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
+        <li><a href="view/productos.html">Productos</a></li>
+        <li><a href="view/presupuesto.html">Presupuesto</a></li>
+        <li><a href="view/contacto.html">Contacto</a></li>
       </ul>
     </nav>
   </header>
@@ -33,10 +36,11 @@
     <!-- Sección 2: Servicios destacados -->
     <section id="servicios">
       <h2>Productos a la venta</h2>
-      <br>
+      
       <div class="servicio">
         <h3>Compra y venta.</h3>
-        <p>tenemos las mejores maquinas para cortar cabello nuevas o usadas, tambien compramos la tuya dependiendo su estado.</p>
+        <p>tenemos las mejores maquinas para cortar cabello nuevas o usadas, tambien compramos la tuya dependiendo su
+          estado.</p>
       </div>
       <div class="servicio">
         <h3>Reparacion.</h3>
@@ -44,7 +48,8 @@
       </div>
       <div class="servicio">
         <h3>Mantenimiento.</h3>
-        <p>Realizmos mantenimiento preventivo para que tus herramientas vuelvan a funcionar igual que cuando la adquiriste.</p>
+        <p>Realizmos mantenimiento preventivo para que tus herramientas vuelvan a funcionar igual que cuando la
+          adquiriste.</p>
       </div>
     </section>
 
@@ -64,9 +69,9 @@
 
   <footer>
     <div class="redes">
-      <a href="https://www.facebook.com/"><img src="img/facebook.png" alt="Facebook" /></a>
-      <a href="https://x.com/X."><img src="img/gorjeo.png" alt="Twitter" /></a>
-      <a href="https://www.instagram.com/"><img src="img/instagram.png" alt="Instagram" /></a>
+      <a href="https://www.facebook.com/"><img src="img/facebook.png" alt="Facebook" ></a>
+      <a href="https://x.com/X."><img src="img/gorjeo.png" alt="Twitter" ></a>
+      <a href="https://www.instagram.com/"><img src="img/instagram.png" alt="Instagram" ></a>
     </div>
     <div class="info">
       <p>Dirección de la empresa - Calle abetos 12, azuqueca de henares , españa</p>
