--- a/contacto.html
+++ b/contacto.html
@@ -15,9 +15,9 @@
     <nav>
       <ul class="menu">
         <li><a href="index.html">Inicio</a></li>
-        <li><a href="view/productos.html">Productos</a></li>
-        <li><a href="view/presupuesto.html">Presupuesto</a></li>
-        <li><a href="view/contacto.html" class="activo">Contacto</a></li>
+        <li><a href="productos.html">Productos</a></li>
+        <li><a href="presupuesto.html">Presupuesto</a></li>
+        <li><a href="contacto.html" class="activo">Contacto</a></li>
       </ul>
     </nav>
   </header>
