--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -19,9 +19,9 @@
     <nav>
       <ul class="menu">
         <li><a href="index.html" class="activo">Inicio</a></li>
-        <li><a href="view/productos.html">Productos</a></li>
-        <li><a href="view/presupuesto.html">Presupuesto</a></li>
-        <li><a href="view/contacto.html">Contacto</a></li>
+        <li><a href="productos.html">Productos</a></li>
+        <li><a href="presupuesto.html">Presupuesto</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
       </ul>
     </nav>
   </header>
