--- a/productos.html
+++ b/productos.html
@@ -21,9 +21,9 @@
         <nav>
             <ul class="menu">
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="view/productos.html" class="activo">Productos</a></li>
-                <li><a href="view/presupuesto.html">Presupuesto</a></li>
-                <li><a href="view/contacto.html">Contacto</a></li>
+                <li><a href="productos.html" class="activo">Productos</a></li>
+                <li><a href="presupuesto.html">Presupuesto</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
