--- a/presupuesto.html
+++ b/presupuesto.html
@@ -17,9 +17,9 @@
     <nav>
       <ul class="menu">
         <li><a href="index.html">Inicio</a></li>
-        <li><a href="view/productos.html">Productos</a></li>
-        <li><a href="view/presupuesto.html" class="activo">Presupuesto</a></li>
-        <li><a href="">Contacto</a></li>
+        <li><a href="productos.html">Productos</a></li>
+        <li><a href="presupuesto.html" class="activo">Presupuesto</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
       </ul>
     </nav>
   </header>
@@ -27,15 +27,16 @@
   <main>
     <section id="presupuesto">
       <h1>Solicita tu presupuesto</h1>
-      <form action="enviar-presupuesto.php" method="POST" id="formPresupuesto">
+      
+
         <!-- Nombre -->
         <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" required>
+        <input type="text" id="nombre" name="nombre" pattern="[0-20]{20}" required>
 
 
         <!-- Email -->
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
+        <input type="email" id="email" name="email" pattern="[0-100]{100}" required>
 
 
         <!-- Teléfono -->
@@ -58,7 +59,7 @@
 
         <!-- Botón de envío -->
         <button type="submit">Enviar </button>
-      </form>
+      
     </section>
   </main>
 
